# rustopus

./: .gitignore  CLAUDE.md  COUPA_PLAN.md  Cargo.toml  Config.toml  DOCKER_PLAN.md  LICENSE  README.md  build.rs  build.sh  build_client_mac.sh  build_client_win.sh  build_release.sh  client.bat  client.sh  debug_start  start.sh  zip_mac_app.sh
.github/: copilot-instructions.md
client/: CLAUDE.md  Cargo.toml  README.md  build.rs
client/src/: api.rs  app.rs  config.rs  cron.rs  main.rs  menubar.rs  scheduler.rs
docs/: README.md
docs/api/: README.md
docs/get-barcodes/: README.md  request.ps1  request.py  request.sh  response.xml
docs/get-images/: README.md  request.js  request.ps1  request.py
docs/get-prices/: README.md  request.cs  request.js  request.ps1  request.py  request.sh  response.xml
docs/get-products/: README.md  description.md  request.js  request.ps1  request.py  request.sh  response.xml
docs/get-stocks/: README.md  request.js  request.ps1  request.py  request.sh  response.xml
docs/parameters/: authcode.txt
ping/: curl_output.txt  test.sh
rustopus/: Cargo.toml  Config.toml  build.bat  build.sh  build_debug.sh  build_release.bat  build_release.sh  cikk_call.sh  debug_start.bat  debug_start.sh  start  start.sh
rustopus/src/: main.rs  main_2.rs
rustopus/src/converters/: bulk.rs  errors.rs  images.rs  mod.rs  prices.rs  products.rs  stocks.rs
rustopus/src/errors/: errors.json
rustopus/src/global/: errors.rs
rustopus/src/o8_xml/: images.rs  mod.rs  prices.rs  products.rs  stock.rs  stocks.rs
rustopus/src/partner_xml/: bulk.rs  defaults.rs  images.rs  mod.rs  prices.rs  products.rs  stock.rs  stocks.rs
rustopus/src/routes/: bulk.rs  default.rs  images.rs  mod.rs  prices.rs  products.rs  stocks.rs
rustopus/src/service/: config.rs  errors.rs  ipv4.rs  log.rs  mod.rs  path.rs  soap.rs  soap_config.rs
rustopus/src/static/: swagger.html
rustopus/src/static/docs/: index.html  openapi.yaml  swagger-initializer.js
src/: main.rs
src/C/: append.c  date_prefix.c  string_man.c
src/converters/: bulk.rs  images.rs  prices.rs  products.rs  stocks.rs
src/errors/: errors.json
src/global/: envelope.rs  errors.rs  mod.rs
src/language/: countries.rs
src/macros/: get.rs  in.rs  mod.rs  out.rs  service.rs
src/o8_xml/: barcode.rs  defaults.rs  images.rs  invoice.rs  invoices.rs  mod.rs  prices.rs  products.rs  stocks.rs
src/partner_csv/: bulk.rs  products.rs
src/partner_xml/: barcode.rs  bulk.rs  images.rs  (+8 more)
tests/: get_test.rs
(+103 files in other folders)
