[package]
name = "rustopus"
version = "1.0.1"
edition = "2024"

[dependencies]
config = "0.13"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls", "json"] }
actix-web = "4"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4"] }
quick-xml = { version = "0.31", features = ["serialize"] }
chrono = "0.4"
dotenv = "0.15"
log = "0.4"
flexi_logger = "0.27"
once_cell = "1.18"
lazy_static = "1.4"
futures = "0.3"