[package]
name = "rustopus-client"
version = "0.1.0"
edition = "2024"

[build-dependencies]
winresource = "0.1"

[dependencies]
eframe = { version = "0.31", features = ["default"] }
egui = "0.31"
egui_extras = "0.31"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rfd = "0.15"
image = { version = "0.25", default-features = false, features = ["png"] }
chrono = "0.4"
