[package]
name = "rustopus-client"
version = "0.1.0"
edition = "2024"

[build-dependencies]
winresource = "0.1"

[dependencies]
eframe = { version = "0.31", features = ["default"] }
egui = "0.31"
egui_extras = "0.31"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rfd = "0.15"
image = { version = "0.25", default-features = false, features = ["png"] }
chrono = "0.4"
dirs = "6"

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
tray-icon = "0.21"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
raw-window-handle = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSResponder", "NSRunningApplication", "NSImage"] }
objc2-foundation = { version = "0.3", features = ["NSData"] }
