[package]
name = "rustopus"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "rustls-tls", "json"] }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4"] }
quick-xml = { version = "0.31", features = ["serialize"] }
chrono = "0.4"
dotenv = "0.15"